New iframe page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <li><a href="./modals/index.html">Modals</a></li>
       <li><a href="./checkBox/index.html">Checkbox</a></li>
       <li><a href="./video/index.html">Video</a></li>
+      <li><a href="./iframe/index.html">Iframe</a></li>
     </ul>
   </body>
 </html>
