--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="./checkBox/index.html">Checkbox</a></li>
       <li><a href="./video/index.html">Video</a></li>
       <li><a href="./iframe/index.html">Iframe</a></li>
+      <li><a href="./events/index.html">Events</a></li>
     </ul>
   </body>
 </html>
